# local_reference_renamer

./: LICENSE  README.md  local_reference_renamer.py  pyproject.toml
tests/: __init__.py  conftest.py  conftest_optimized.py  generate_golden_files.py  golden_utils.py  test_local_reference_renamer.py  test_optimized.py  test_project_regression.py  test_result_demo.py  test_result_utils.py
tests/golden_files/: README.md  golden_commit_hash.txt  golden_dry_run_output.txt  golden_scan_output.txt
tests/projects/: setup_hdl_project.py
tests/test_projects/: README.md
tests/test_projects/original/: helpers.py  main.py  unused.py  utils.py
tests/test_projects/renamed/: helpers.py  main.py  unused.py
tests/test_projects/test_temp/: helpers.py  utils.py
